--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "material-ui": "^1.0.0-beta.23",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "object-assign": "4.1.1",
@@ -36,6 +37,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
